--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="styles.css">
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,700,200' rel='stylesheet' type='text/css'></head>
   <body>
-    <header>
+    <header id="#top">
       <div class="wrapper">
           <div class="main-nav">
             <a class="name" href="index.html">Luke Peterson</a>
               <ul class="nav">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
               </ul>
           </div>
 
@@ -24,7 +24,7 @@
       </div>
     </header>
 
-    <main>
+    <main id="portfolio">
       <h2>Portfolio</h2>
         <div class="portfolio">
           <img src="images/portfolio-1.png" alt="An example of my work." />
@@ -64,7 +64,7 @@
 
     </main>
 
-    <footer class="clearfix">
+    <footer class="clearfix" id="contact">
       <div class="wrapper">
         <div class="footer-top">
           <h2>Contact</h2>
@@ -79,13 +79,13 @@
           <a class="name">Luke Peterson</a>
             <div class="nav">
                 <ul>
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">Portfolio</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="#portfolio">Portfolio</a></li>
+                  <li><a href="#portfolio">Contact</a></li>
                 </ul>
 
             </div>
-            <a class="to-top" href="#">Back to Top</a>
+            <a class="to-top" href="#top">Back to Top</a>
 
         </div>
       </div>
