Updated footer, links, and code.
Passing CSS and HTML. Links go to anchor bookmarks, and footer is
horizontal menu now.

--- a/index.html
+++ b/index.html
@@ -81,13 +81,12 @@
                 <ul>
                   <li><a href="index.html">Home</a></li>
                   <li><a href="#portfolio">Portfolio</a></li>
-                  <li><a href="#portfolio">Contact</a></li>
+                  <li><a href="#contact">Contact</a></li>
                 </ul>
-
             </div>
             <a class="to-top" href="#top">Back to Top</a>
-
         </div>
+
       </div>
     </footer>
   </body>
