--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 
         <div class="footer-bottom">
           <a class="name">Luke Peterson</a>
-            <div class="nav">
-                <ul>
+            <div>
+                <ul class="nav">
                   <li><a href="index.html">Home</a></li>
                   <li><a href="#portfolio">Portfolio</a></li>
                   <li><a href="#contact">Contact</a></li>
