--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Luke Peterson</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="scss/styles.css">
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,700,200' rel='stylesheet' type='text/css'></head>
   <body>
     <header id="#top">
@@ -17,51 +17,53 @@
                 <li><a href="#contact">Contact</a></li>
               </ul>
           </div>
-
-          <img src="images/profile-pic.jpg" alt="Luke Peterson" class="profile-image" />
-          <p>I'm a front-end developer from Seattle, WA.  I like coding, drinking coffee, and playing the drums.</p>
+          <div class="header-content">
+            <img src="images/profile-pic.jpg" alt="Luke Peterson" class="profile-image" />
+            <p>I'm a front-end developer from Seattle, WA.  I like coding, drinking coffee, and playing the drums.</p>   
+          </div>
 
       </div>
     </header>
 
     <main id="portfolio">
       <h2>Portfolio</h2>
-        <div class="portfolio">
-          <img src="images/portfolio-1.png" alt="An example of my work." />
-          <h3>Marketing Page</h3>
-          <p>This project shows the front page of a marketing website for a specific business I'm interested in.</p>
-        </div>
+        <div class="portfolio-wrapper">
+          <div class="portfolio">
+            <img src="images/portfolio-1.png" alt="An example of my work." />
+            <h3>Marketing Page</h3>
+            <p>This project shows the front page of a marketing website for a specific business I'm interested in.</p>
+          </div>
 
-        <div class="portfolio">
-          <img src="images/portfolio-2.png" alt="An example of my work." />
-          <h3>Search Page</h3>
-          <p>This project searches through a specific database to find information that the user is trying to look up.</p>
-        </div>
+          <div class="portfolio">
+            <img src="images/portfolio-2.png" alt="An example of my work." />
+            <h3>Search Page</h3>
+            <p>This project searches through a specific database to find information that the user is trying to look up.</p>
+          </div>
 
-        <div class="portfolio">
-          <img src="images/portfolio-3.png" alt="An example of my work." />
-          <h3>Travel App</h3>
-          <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
-        </div>
+          <div class="portfolio">
+            <img src="images/portfolio-3.png" alt="An example of my work." />
+            <h3>Travel App</h3>
+            <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+          </div>
 
-        <div class="portfolio">
-          <img src="images/portfolio-4.png" alt="An example of my work." />
-          <h3>Map of Favorite Spots</h3>
-          <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
-        </div>
+          <div class="portfolio">
+            <img src="images/portfolio-4.png" alt="An example of my work." />
+            <h3>Map of Favorite Spots</h3>
+            <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+          </div>
 
-        <div class="portfolio">
-          <img src="images/portfolio-5.png" alt="An example of my work." />
-          <h3>Photo Gallery</h3>
-          <p>This project shows a picture of a recent trip to the viewer and allows them to easilty navigate through photos.</p>
-        </div>
+          <div class="portfolio">
+            <img src="images/portfolio-5.png" alt="An example of my work." />
+            <h3>Photo Gallery</h3>
+            <p>This project shows a picture of a recent trip to the viewer and allows them to easilty navigate through photos.</p>
+          </div>
 
-        <div class="portfolio">
-          <img src="images/portfolio-6.png" alt="An example of my work." />
-          <h3>Calculator</h3>
-          <p>Someone can enter the numbers they want, and press the big blue button to get a result.</p>
+          <div class="portfolio">
+            <img src="images/portfolio-6.png" alt="An example of my work." />
+            <h3>Calculator</h3>
+            <p>Someone can enter the numbers they want, and press the big blue button to get a result.</p>
+          </div>
         </div>
-
     </main>
 
     <footer class="clearfix" id="contact">
